inclusão de nova logo

--- a/sispet/app/templates/index.html
+++ b/sispet/app/templates/index.html
@@ -24,7 +24,7 @@
         </div>
     <p>
 
-    <p style="font-size:20px;color:#008000;text-align:center;">
+    <p style="font-size:20px;color:#149C82;text-align:center;">
     Aplicação e os dados contidos no sistema são de resposabilidade do SisPet CopyRight. 
     </p>
 {% endblock %}
